workloads/dekt4pets/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: demo-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec: 
  rules: 
    - host: demo.tanzu.dekt.io
      http: 
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: gateway-demo
             port:
               number: 80
